fix: plugin disable overflow

--- a/app/styles/anime.scss
+++ b/app/styles/anime.scss
@@ -1,4 +1,6 @@
 #app {
+  @apply drop-shadow;
+
   * {
     @apply transition;
   }
